Fix issue causing menus' text to not be legible

--- a/src/Assets/Sass/Components/List.sass
+++ b/src/Assets/Sass/Components/List.sass
@@ -3,4 +3,4 @@
  */
 .v-list-item__title
     // Fix an issue with flex children with `white-space: no-wrap` and `text-overflow: ellipsis`.
-    width: 0
+    min-width: 0
